k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: taskboard
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 3000
      targetPort: http
