k8s/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
  namespace: taskboard
  labels:
    app: cache
spec:
  type: ClusterIP
  selector:
    app: cache
  ports:
    - name: redis
      port: 6379
      targetPort: redis
